--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "back-end",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.2",
+    "@types/node": "^17.0.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongodb": "^5.1.0"
+    "jshint": "^2.13.6",
+    "mongodb": "^4.13.0",
+    "node-fetch": "^3.2.6"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
