--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "jshint": "^2.13.6",
     "mongodb": "^4.13.0",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.2.6"
   },
   "devDependencies": {
