--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^17.0.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jshint": "^2.13.6",
     "mongodb": "^4.13.0",
+    "mongoose": "^7.0.5",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.2.6"
   },
